# src/MCP.Infrastructure/Services/IChatService.cs
@@ -1,0 +1,12 @@
+using MCP.Application.DTOs.AI.ChatCompletion;
+
+namespace MCP.Infrastructure.Services;
+
+public interface IChatService
+{
+    Task<ChatResponseAppModel> GetResponseAsync(IEnumerable<ChatMessageAppModel> messagesAppModel, ChatOptionsAppModel? optionsAppModel = null,
+        CancellationToken cancellationToken = new());
+
+    IAsyncEnumerable<ChatResponseUpdateAppModel> GetStreamingResponseAsync(IEnumerable<ChatMessageAppModel> messagesAppModel, ChatOptionsAppModel? optionsAppModel = null,
+        CancellationToken cancellationToken = new());
+}
